--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
 <body>
 
     <div class="container" id="app">
-        <h3>{% lorem 2 b random %}</h3>
+        <main-page></main-page>
     </div>
 
 </body>
