--- a/src/main/resources/static/css/Hospital.css
+++ b/src/main/resources/static/css/Hospital.css
@@ -1,76 +1,122 @@
-body{
+body {
     background-color: rgb(216, 216, 216);
 }
-#sidebarMenu{
-    background-color: rgb(215, 230, 231);
+
+#sidebarMenu {
+    background-color: rgb(233, 235, 224);
 }
+
 a.button {
     display: inline-block;
     background: lightgray;
     border: 2px outset lightgray;
     cursor: default;
 }
+
 a.button:active {
     border-style: inset;
 }
-.header_wrapper{
+
+.header_wrapper {
     display: flex;
     justify-content: space-between;
 }
-.logo_search{
+
+.logo_search {
     width: 700px;
     display: flex;
     justify-content: space-between;
 }
-.exit{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.header_logo{
+
+.header_logo {
     margin-right: 20px;
 }
-.notepad{
+
+.center_alignment {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 /* Sidebar */
 .sidebar {
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
-    padding: 58px 0 0; /* Height of navbar */
+    padding: 58px 0 0;
+    /* Height of navbar */
     box-shadow: 0 4px 7px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
     width: 240px;
     z-index: 600;
     background-color: rgb(149, 255, 220);
     color: black;
 }
-    
+
 @media (max-width: 991.98px) {
     .sidebar {
         width: 100%;
     }
 }
+
 .sidebar .active {
     border-radius: 5px;
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
 }
-    
+
 .sidebar-sticky {
     position: relative;
     top: 0;
     height: calc(100vh - 48px);
     padding-top: 0.5rem;
     overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    overflow-y: auto;
+    /* Scrollable contents if viewport is shorter than content. */
 }
+
 [type='radio'] {
-    display: none; 
+    display: none;
 }
 
+.exit_btn {
+    border-radius: 30px;
+    width: 80px;
+    height: 40px;
+    margin-right: 10px;
+}
 
+.turn_items {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
-    
+.appointment_header {
+    width: 40vw;
+    margin-top: 30px;
+
+}
+
+.radius_wrapper {
+    border-radius: 30px;
+}
+
+.text_wrapper {
+    width: 40vw;
+    text-align: center;
+    margin-left: 20px;
+}
+
+.login_form_wrapper {
+    margin-left: 30px;
+}
+
+.input_field {
+    width: 30vw;
+}
+
+.image_wrapper {
+    border-radius: 30px;
+    width: 45vw;
+    height: 60vh;
+}
