repositories models created

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+  <style> 
+    body {
+      background: red;
+      animation: mymove 5s infinite;
+    }
+
+    @keyframes mymove {
+      0% {background-color: #84def5;}
+      50% {background-color: #a6f7d8;}
+      100% {background-color: #84def5;}
+    }
+    .hospital_img{
+      width: 30%;
+    }
+    .login_notification{
+      display: flex; 
+      flex-direction: row; 
+      align-items: center; 
+      justify-content: center; 
+      width: 30vw;
+      text-align: center;
+      color: white;
+      font-weight: 600;
+      font-size: x-large;
+    }
+    .login_notification_wrapper{
+      margin-top: 5vh;
+      display: flex; 
+      flex-direction: row; 
+      align-items: center; 
+      justify-content: center; 
+    }
+    .login_header_wrapper{
+      display: flex; 
+      flex-direction: row; 
+      align-items: center; 
+      justify-content: center; 
+    }
+    .login_header{
+      font-family: '';
+      color: white;
+      text-align: center;
+      font-family: 'Audrey';
+      height: 14vh;
+      font-size: 9vh;
+      margin-top: 10vh;
+      width: 50vw;
+    }
+    .login_form_wrapper{
+      height: 50vh;
+    }
+
+    </style>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,24 +92,36 @@
         <script type="module" src="/js/vue/vueApp.js"></script>
     </head>
     <body>
-      <div class="login_form_wrapper">
-        <div th:if="${param.error}">
-            Invalid username and password.
+      <div class="login_header_wrapper">
+        <div class="login_header bg-success radius_wrapper">
+          Harmony Health Group
         </div>
-        <div th:if="${param.logout}">
-            You have been logged out.
+      </div>
+      <div class="login_notification_wrapper">
+        <div th:if="${param.error}" class="login_notification bg-warning radius_wrapper">
+          Invalid username and password.
         </div>
+        <div th:if="${param.logout}" class="login_notification bg-warning radius_wrapper">
+          You have been logged out.
+        </div>
+      </div>
+      <div class="login_form_wrapper" style="display: flex; flex-direction: row; align-items: center; justify-content: center;">
+
+          <img src="images/hospital.png" alt="Hospital" class="hospital_img">
+
         <form th:action="@{/login}" method="post">
             <div class="form-group login_form">
-                <label for="exampleInputEmail1">Login</label>
+                <label for="exampleInputEmail1"><strong class="text-white h3">Login</strong></label>
                 <input type="text" name="username" class="form-control input_field" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your login with anyone else.</small>
               </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
+              <div class="form-group text-white">
+                <label for="exampleInputPassword1"><strong class="text-white h3">Password</strong></label>
                 <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <div style="display: flex; justify-content: center;">
+                <button type="submit" class="btn btn-primary"><p class="text-white h5">Submit</p></button>
+              </div> 
         </form>
       </div>
     </body>
