--- a/src/main/resources/static/css/Hospital.css
+++ b/src/main/resources/static/css/Hospital.css
@@ -20,16 +20,23 @@ a.button:active {
 .header_wrapper {
     display: flex;
     justify-content: space-between;
+    width: 70vw;
 }
 
 .logo_search {
-    width: 700px;
+    width: 60vw;
     display: flex;
     justify-content: space-between;
 }
 
 .header_logo {
     margin-right: 20px;
+}
+
+.end_alignment {
+    display: flex;
+    justify-content: center;
+    align-items: end;
 }
 
 .center_alignment {
@@ -92,8 +99,8 @@ a.button:active {
 }
 
 .appointment_header {
-    width: 40vw;
-    margin-top: 30px;
+    width: 70vw;
+    margin-top: 20px;
 
 }
 
@@ -104,11 +111,6 @@ a.button:active {
 .text_wrapper {
     width: 40vw;
     text-align: center;
-    margin-left: 20px;
-}
-
-.login_form_wrapper {
-    margin-left: 30px;
 }
 
 .input_field {
@@ -120,3 +122,74 @@ a.button:active {
     width: 45vw;
     height: 60vh;
 }
+
+@font-face {
+    font-family: 'Audrey';
+    src: url('/src/main/resources/static/fonts/Audrey/Audrey-Medium.otf');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+.greeting_wrapper {
+    display: flex;
+    justify-content: space-around;
+    width: 30vw;
+
+    display: inline-block;
+    margin-left: 100px;
+    margin-top: 100px;
+}
+
+.greeting {
+    margin-left: 10vw;
+    font-size: small;
+}
+
+.woman_doctor_img {
+    position: absolute;
+    margin-left: -50px;
+    margin-top: -128px;
+}
+
+.carousel_wrapper {
+    width: 70vw;
+    height: 300px;
+}
+
+.carousel {
+    display: flex;
+    justify-content: space-around;
+}
+
+.emergency {
+    display: flex;
+    justify-content: space-between;
+}
+
+.carousel_item_wrapper,
+.emergency_item_wrapper,
+.emergency_item_wrapper2 {
+    padding: 40px;
+}
+
+.emergency_item_wrapper {
+    background-color: #f6b253;
+}
+
+.emergency_item_wrapper2 {
+    background-color: #f6cb53;
+}
+
+.emergency_wrapper {
+    width: 70vw;
+    height: auto;
+}
+
+.alert {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carousel_item {}
